--- a/browser-gui/src/style.css
+++ b/browser-gui/src/style.css
@@ -10,3 +10,14 @@ body {
   right: 0;
   bottom: 0;
 }
+
+#buttons {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 1ex;
+}
+
+button {
+  cursor: pointer;
+}
