--- a/browser-gui/src/style.css
+++ b/browser-gui/src/style.css
@@ -11,10 +11,17 @@ body {
   bottom: 0;
 }
 
-#buttons {
+#view-buttons {
   position: absolute;
   bottom: 0;
   left: 0;
+  padding: 1ex;
+}
+
+#control-buttons {
+  position: absolute;
+  bottom: 0;
+  right: 0;
   padding: 1ex;
 }
 
